# epoch-agent-runtime

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/epoch-bench/: Cargo.toml
crates/epoch-bench/helpers/: cow_probe.py
crates/epoch-bench/src/: environment.rs  lib.rs
crates/epoch-bench/src/suites/: checkpoint.rs  cow.rs  fault.rs  mod.rs
crates/epoch-bench/tests/: harness.rs  week4_suites.rs
crates/epoch-blob/: Cargo.toml
crates/epoch-blob/src/: lib.rs
crates/epoch-blob/tests/: blob_store.rs
crates/epoch-capabilities/: Cargo.toml
crates/epoch-capabilities/src/: lib.rs
crates/epoch-capabilities/tests/: effect_adapter.rs  service.rs
crates/epoch-checkpoint/: Cargo.toml
crates/epoch-checkpoint/src/: application.rs  lib.rs
crates/epoch-checkpoint/tests/: application.rs
crates/epoch-cli/: Cargo.toml
crates/epoch-cli/src/: bench.rs  demo.rs  main.rs  ml.rs
crates/epoch-cli/tests/: bench.rs  demo.rs  doctor.rs  inspection.rs  ml.rs  recovery.rs  run.rs  security.rs  serve.rs
crates/epoch-core/: Cargo.toml
crates/epoch-core/src/: event.rs  id.rs  lib.rs  state.rs
crates/epoch-criu-compat/: Cargo.toml
crates/epoch-criu-compat/src/: lib.rs
crates/epoch-criu-compat/tests/: cli.rs  contract.rs  fixture.rs  linux_native.rs
crates/epoch-dashboard/: Cargo.toml
crates/epoch-dashboard/src/: assets.rs  backends.rs  benchmarks.rs  lib.rs  read_model.rs
crates/epoch-dashboard/tests/: dashboard.rs
crates/epoch-diff/: Cargo.toml
crates/epoch-diff/src/: lib.rs
crates/epoch-diff/tests/: application_diff.rs
crates/epoch-effects/: Cargo.toml
crates/epoch-effects/src/: lib.rs
crates/epoch-effects/tests/: gateway.rs
crates/epoch-events/: Cargo.toml
crates/epoch-events/src/: lib.rs
crates/epoch-events/tests/: journal.rs
crates/epoch-mock-effects/: Cargo.toml
crates/epoch-mock-effects/src/: lib.rs  main.rs
crates/epoch-mock-effects/tests/: http_service.rs  idempotency.rs
crates/epoch-performance-matrix/: Cargo.toml
crates/epoch-performance-matrix/helpers/: cow_matrix_probe.py
crates/epoch-performance-matrix/src/: artifacts.rs  cow.rs  environment.rs  isolation.rs  lib.rs  model.rs
crates/epoch-performance-matrix/tests/: isolation_contract.rs  matrix_contract.rs  report_contract.rs
crates/epoch-proc/: Cargo.toml
crates/epoch-proc/src/: collector.rs  kernel.rs  lib.rs  model.rs  parse.rs
crates/epoch-proc/tests/: collector.rs  kernel_links_and_network.rs  parsers.rs
crates/epoch-proc/tests/fixtures/: cgroup-mixed.txt  maps-valid.txt  status-malformed.txt  status-valid.txt  tcp4-mixed.txt  tcp6-valid.txt
crates/epoch-protocol/: Cargo.toml
crates/epoch-protocol/src/: lib.rs  unique_json.rs
crates/epoch-protocol/tests/: protocol.rs  stream.rs
crates/epoch-sandbox/: Cargo.toml
crates/epoch-sandbox/src/: lib.rs
crates/epoch-sandbox/tests/: backend_contract.rs  linux_native.rs
crates/epoch-storage/: Cargo.toml
crates/epoch-storage/src/: 0001_initial.sql  0002_append_only_events.sql  0003_append_only_effect_history.sql  0003_durable_branch_forks.sql  0004_trusted_capability_authority.sql  0006_security_frontiers.sql  lib.rs
crates/epoch-storage/tests/: migrations.rs
crates/epoch-supervisor/: Cargo.toml
crates/epoch-supervisor/src/: fork.rs  lib.rs  manifest.rs  recovery.rs  stream.rs  supervisor.rs
crates/epoch-supervisor/tests/: direct_supervisor.rs  manifest.rs
crates/epoch-test-agent/: Cargo.toml
crates/epoch-test-agent/fixtures/: recorded-model-responses.json
crates/epoch-test-agent/src/: lib.rs  main.rs
crates/epoch-test-agent/tests/: checkpoint.rs  cli.rs  determinism.rs  supervised.rs  supervised_diff.rs  supervised_fork.rs  supervised_recovery.rs
crates/epoch-trajectory/: Cargo.toml
crates/epoch-trajectory/src/: lib.rs
crates/epoch-trajectory/tests/: export.rs  schema_v1.rs
crates/epoch-trajectory/tests/fixtures/: schema-v1.jsonl
crates/epoch-workspace/: Cargo.toml
crates/epoch-workspace/src/: lib.rs
crates/epoch-workspace/tests/: workspace.rs
docs/: agent-boundary-protocol.md  application-checkpoints.md  benchmarking.md  capability-service.md  criu-compatibility.md  dashboard.md  deterministic-agent.md  effect-gateway.md  final-performance-matrix.md  final-runbook.md  fork-replay.md  implementation-plan.md  interview-demo.md  linux-sandbox.md  ml-branch-value.md  ml-demo.md  runtime-spec.md  semantic-diff.md  trajectory-schema.md  workspace-checkpoint.md
docs/adr/: 001-trusted-state-outside-rollback.md  002-sqlite-and-content-addressed-blobs.md  003-deterministic-workload-first.md  004-recovery-independent-of-criu.md  README.md
docs/evidence/criu-oracle-arm64/: compatibility.json  compatibility.md
docs/evidence/performance-macos-arm64/: RESULTS.md  checksums.sha256  report.json  samples.csv
examples/: deterministic-agent.toml
ml/branch-value/: README.md  pyproject.toml
ml/branch-value/src/epoch_branch_value/: __init__.py  baselines.py  cli.py  metrics.py  model.py  schema.py  split.py  synthetic.py  training.py
ml/branch-value/tests/: test_baselines.py  test_cli.py  test_model_training.py  test_schema.py  test_split.py
results/final-11739a8/: README.md
results/final-11739a8/macos-arm64/: SHA256SUMS
results/final-11739a8/macos-arm64/benchmark/bench-4a118fc7-ad7c-4161-9c87-8d0371bbbd6c/: RESULTS.md  report.json  samples.csv
results/final-11739a8/macos-arm64/demo/: rehearsal-1.json  rehearsal-2.json  rehearsal-3.json
results/final-11739a8/oracle-arm64/: SHA256SUMS
results/final-11739a8/oracle-arm64/benchmark/: bench-summary.json
results/final-11739a8/oracle-arm64/benchmark/bench-a6c32a7b-e437-4a70-8f8b-980d60e28a83/: RESULTS.md  report.json  samples.csv
results/final-11739a8/oracle-arm64/criu/compatibility/: compatibility.json  compatibility.md
results/final-11739a8/oracle-arm64/demo/: report.json
results/oracle-arm64/: README.md
results/oracle-arm64/bench-da1681b5-799e-40ac-afdb-dfa37e94328c/: RESULTS.md  report.json  samples.csv
scripts/: bootstrap-ubuntu.sh  check.sh  ml-cross-language-smoke.sh
