[workspace]
members = [
    "crates/epoch-blob",
    "crates/epoch-capabilities",
    "crates/epoch-cli",
    "crates/epoch-core",
    "crates/epoch-events",
    "crates/epoch-effects",
    "crates/epoch-protocol",
    "crates/epoch-storage",
    "crates/epoch-supervisor",
    "crates/epoch-test-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
epoch-blob = { path = "crates/epoch-blob" }
epoch-capabilities = { path = "crates/epoch-capabilities" }
epoch-core = { path = "crates/epoch-core" }
epoch-effects = { path = "crates/epoch-effects" }
epoch-storage = { path = "crates/epoch-storage" }
getrandom = "0.4"
nix = { version = "0.30", features = ["process", "signal"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
tempfile = "3.23"
thiserror = "2.0"
toml = "0.9"
uuid = { version = "1.18", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
