[workspace]
members = [
    "crates/epoch-bench",
    "crates/epoch-blob",
    "crates/epoch-capabilities",
    "crates/epoch-checkpoint",
    "crates/epoch-criu-compat",
    "crates/epoch-cli",
    "crates/epoch-core",
    "crates/epoch-diff",
    "crates/epoch-events",
    "crates/epoch-effects",
    "crates/epoch-proc",
    "crates/epoch-protocol",
    "crates/epoch-sandbox",
    "crates/epoch-storage",
    "crates/epoch-supervisor",
    "crates/epoch-test-agent",
    "crates/epoch-workspace",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
epoch-bench = { path = "crates/epoch-bench" }
epoch-blob = { path = "crates/epoch-blob" }
epoch-capabilities = { path = "crates/epoch-capabilities" }
epoch-checkpoint = { path = "crates/epoch-checkpoint" }
epoch-core = { path = "crates/epoch-core" }
epoch-effects = { path = "crates/epoch-effects" }
epoch-sandbox = { path = "crates/epoch-sandbox" }
epoch-storage = { path = "crates/epoch-storage" }
epoch-workspace = { path = "crates/epoch-workspace" }
getrandom = "0.4"
nix = { version = "0.30", features = ["process", "signal"] }
libc = "0.2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
tempfile = "3.23"
thiserror = "2.0"
toml = "0.9"
uuid = { version = "1.18", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
