[package]
name = "epoch-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
epoch-blob.workspace = true
epoch-checkpoint.workspace = true
epoch-workspace.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
