[package]
name = "epoch-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
epoch-blob.workspace = true
epoch-capabilities.workspace = true
epoch-checkpoint.workspace = true
epoch-core.workspace = true
epoch-effects.workspace = true
epoch-performance-matrix.workspace = true
epoch-storage.workspace = true
epoch-workspace.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
