[package]
name = "epoch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "epoch"
path = "src/main.rs"

[dependencies]
clap.workspace = true
epoch-core = { path = "../epoch-core" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true

