[package]
name = "epoch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "epoch"
path = "src/main.rs"

[dependencies]
clap.workspace = true
epoch-core = { path = "../epoch-core" }
epoch-supervisor = { path = "../epoch-supervisor" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
epoch-blob.workspace = true
epoch-checkpoint.workspace = true
tempfile.workspace = true

[lints]
workspace = true
