[package]
name = "epoch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "epoch"
path = "src/main.rs"

[dependencies]
clap.workspace = true
epoch-capabilities.workspace = true
epoch-core = { path = "../epoch-core" }
epoch-effects.workspace = true
epoch-sandbox.workspace = true
epoch-storage.workspace = true
epoch-supervisor = { path = "../epoch-supervisor" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
epoch-blob.workspace = true
epoch-checkpoint.workspace = true
tempfile.workspace = true

[lints]
workspace = true
