[package]
name = "epoch-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
epoch-sandbox.workspace = true
epoch-storage.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tiny_http = "0.12"
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
