[package]
name = "epoch-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
epoch-blob = { path = "../epoch-blob" }
epoch-checkpoint = { path = "../epoch-checkpoint" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
