[package]
name = "epoch-events"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
epoch-blob.workspace = true
epoch-core.workspace = true
epoch-storage.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
