[package]
name = "epoch-mock-effects"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
epoch-blob = { path = "../epoch-blob" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tiny_http.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
