[package]
name = "epoch-performance-matrix"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true }
epoch-sandbox = { workspace = true }
nix = { workspace = true, features = ["resource"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
