[package]
name = "epoch-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nix.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = { version = "0.5", features = ["json"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
