[package]
name = "epoch-test-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
epoch-blob = { path = "../epoch-blob" }
epoch-checkpoint = { path = "../epoch-checkpoint" }
epoch-protocol = { path = "../epoch-protocol" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
