[project]
name = "epoch-branch-value"
version = "0.1.0"
description = "Privacy-safe trajectory branch-value experiments for Epoch"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23,<3",
    "torch>=2.2,<2.8",
]

[project.scripts]
epoch-branch-value = "epoch_branch_value.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/epoch_branch_value"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["UP006", "UP035", "UP045"]

[tool.uv]
package = true
